# asyncio_fastapi

project/: pyproject.toml
project/project/app/: main.py  models.py  services.py  tasks.py
