[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["m.gudimov <m.gudimov@spider.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


aiofile = "^0.111.1"
